fix(game): battlefield overlapping over other components on game screen. remove z-indexes where unnecessary.

--- a/src/components/Battlefield/Tiles/Decoration/Decoration.module.css
+++ b/src/components/Battlefield/Tiles/Decoration/Decoration.module.css
@@ -29,7 +29,6 @@
 
     -webkit-mask-composite: destination-out;
     mask-composite: exclude;
-    z-index: 1;
 }
 
 .activeEntity {
@@ -71,7 +70,6 @@
     transition: background-color 0.1s;
 
     cursor: pointer;
-    z-index: 2;
 }
 
 .interactableAlly {
